# Simplicity

./: .gitignore  404.html  LICENSE  README.md  Simplicity.sln  docusaurus.config.ts  index.html  package-lock.json  package.json  sitemap.xml
ModelLoadingExample/: ModelLoadingExample.csproj
ObjectsShowcase/: ObjectsShowcase.csproj
Simplicity/: .gitignore  CMakeLists.txt  CMakePresets.json  Geometries.h  Input.cpp  LoadModel.cpp  Simplicity.vcxproj  Simplicity.vcxproj.filters  camera.cpp  camera.h  cameraLink.h  canvas.cpp  canvas.h  canvasLink.h  color.cpp  color.h  colorLink.h  cube.cpp  cube.h  cubeLink.h  drawable.cpp  drawable.h  drawableLink.h  geometriesLink.h  geometry.h  glad.c  graphics.h  graphicsLink.h  graphicsObject.cpp  graphicsObject.h  graphicsObjectLink.h  initializationTools.cpp  input.h  inputLink.h  keyCode.h  main.cpp  mainLink.h  mesh.cpp  mesh.h  model.cpp  (+26 more)
Simplicity.NET/: .gitignore  Color.cs  LibConsts.cs  Program.cs  Simplicity.NET.csproj  Simplicity.sln  Window.cs
Simplicity.NET/Examples/Balls/: Ball.cs  Balls.csproj  Program.cs  README.md  Simulation.cs
Simplicity.NET/Examples/BasicWindow/: BasicWindow.csproj  Program.cs  README.md
Simplicity.NET/Examples/BasicWindow/Shaders/: basic.vert
Simplicity.NET/Examples/ModelLoadingExample/: ModelLoadingExample.csproj  Program.cs
Simplicity.NET/Examples/ObjectsShowcase/: ObjectsShowcase.csproj  Program.cs  README.md
Simplicity.NET/Examples/TextureExample/: Program.cs  TextureExample.csproj
Simplicity.NET/Objects/2D/: Rectangle.cs
Simplicity.NET/Simplicity.NET/: Color.cs  Drawable.cs  LibConsts.cs  MouseInputMode.cs  Quaternion.cs  Scene.cs  Simplicity.NET.csproj  Texture2D.cs  Transform.cs  Vector2.cs  Vector3.cs  Window.cs
Simplicity.NET/Simplicity.NET/Graphics/: Camera.cs  Canvas.cs  Geometries.cs  Geometry.cs  GraphicsSystem.cs  Mesh.cs  Renderer.cs  Scene.cs  Vertex.cs
Simplicity.NET/Simplicity.NET/Graphics/Objects/: Color.cs  GraphicsObject.cs  Texture2D.cs  Transform.cs
Simplicity.NET/Simplicity.NET/Input/: Input.cs  KeyCode.cs  KeyStatus.cs  MouseInputMode.cs  MouseKeyCode.cs
Simplicity.NET/Simplicity.NET/Objects/: Cube.cs  Model.cs  Rectangle.cs
Simplicity/Examples/BasicWindow/: CMakeLists.txt  main.cpp
Simplicity/Examples/ModelLoadingExample/: CMakeLists.txt  README.md  main.cpp
Simplicity/Examples/ObjectsShowcase/: CMakeLists.txt  main.cpp
Simplicity/Examples/TextureExample/: CMakeLists.txt  README.md  main.cpp
Simplicity/LinkGenerator/: .gitignore  file_parsing.py  link_creator.py  main.py
Simplicity/Shaders/: basic.frag  basic.vert
Simplicity/Simplicity/: .gitignore  CMakeLists.txt
Simplicity/Simplicity/include/: InitializationTools.h  Quaternion.h  Vector3.h  Window.h  coreDefinitions.h
Simplicity/Simplicity/include/Graphics/: Brush.h  Camera.h  Graphics.h  Renderer.h
Simplicity/Simplicity/include/Graphics/Geometries/: Geometries.h  Mesh.h
Simplicity/Simplicity/include/Graphics/Objects/: Color.h  Geometry.h  GraphicsObject.h  Texture2D.h  Transform.h
Simplicity/Simplicity/include/Graphics/Tools/: Canvas.h  Scene.h
Simplicity/Simplicity/include/Input/: Input.h  KeyCode.h  KeyStatus.h
Simplicity/Simplicity/link/: CameraLink.h  CanvasLink.h  GraphicsLink.h  InputLink.h  Texture2DLink.h  TransformLink.h  WindowLink.h
Simplicity/Simplicity/link/Objects/: GeometryLink.h  GraphicsObjectLink.h  MeshLink.h
Simplicity/Simplicity/src/: ShaderCompiling.cpp  Window.cpp  main.cpp
Simplicity/Simplicity/src/Graphics/: Graphics.cpp  Renderer.cpp
Simplicity/Simplicity/src/Graphics/Geometries/: Cube.cpp  LoadModel.cpp  Mesh.cpp  Rectangle.cpp  Wheel.cpp
Simplicity/Simplicity/src/Graphics/Objects/: Color.cpp  Texture2D.cpp  Transform.cpp
Simplicity/include/: ShaderCompiling.h  Window.h
Simplicity/include/Graphics/: Vertex.h
Simplicity/include/Graphics/Objects/: Geometry.h
Simplicity/include/Graphics/Tools/: Canvas.h  Scene.h
Simplicity/include/glad/: glad.h
Simplicity/link/: RendererLink.h  SceneLink.h  WindowLink.h
Simplicity/link/Objects/: GeometriesLink.h
Simplicity/src/: InitializationTools.cpp  Input.cpp  LoadModel.cpp  Wheel.cpp  brush.cpp  brush.h  color.cpp  color.h  cube.cpp  geometriesLink.h  geometry.h  geometryLink.h  graphics.cpp  graphicsLink.h  graphicsObject.cpp  graphicsObject.h  initializationTools.cpp  input.h  inputLink.h  main.cpp  meshLink.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shaderCompiling.h  texture2D.cpp  transform.h  vector3.h  window.h
Simplicity/src/Graphics/: Camera.cpp
Simplicity/src/Graphics/Objects/: GraphicsObject.cpp
Simplicity/src/Graphics/Tools/: Canvas.cpp  Scene.cpp
Simplicity/src/Input/: Input.cpp
SimplicityNET/Examples/BasicWindow/: BasicWindow.csproj  Program.cs
SimplicityNET/Simplicity.NET/: Camera.cs  Drawable.cs  KeyCode.cs  KeyStatus.cs  LibConsts.cs  MouseInputMode.cs  Simplicity.NET.csproj  Texture2D.cs  Transform.cs  Vector3.cs  Window.cs
SimplicityNET/Simplicity.NET/Objects/: Cube.cs  Rectangle.cs
TextureExample/: TextureExample.csproj
assets/css/: styles.ef0da415.css
assets/js/: 0e384e19.0a1c055d.js  0e384e19.3eb16b4d.js  0fa35649.8e6553b9.js  0fa35649.9b846a31.js  17896441.5441a1ef.js  1df93b7f.f23be3d5.js  1eeef904.02eb4e76.js  1eeef904.4d3dfe0e.js  237.33b9930d.js  3b8c55ea.1eb7081a.js  3b8c55ea.b88ed5e5.js  487aae49.163cabf8.js  487aae49.2462f523.js  5e95c892.69b74ece.js  6264312d.431af428.js  6264312d.80271f30.js  626fd4d6.a25bcbf6.js  626fd4d6.f9cc9f2e.js  65ffbc67.02b21875.js  a50a10fc.358c35cc.js  a50a10fc.8e5dc393.js  a7456010.5f153021.js  a7bd4aaa.6942c65d.js  a94703ab.9dfd9660.js  aae14dbf.8f90bffa.js  aba21aa0.6ce69b10.js  e73259b5.dac91bb7.js  e73259b5.f2c89375.js  main.434ef7c8.js  main.aae52614.js  runtime~main.90f6b8b9.js  runtime~main.e07d78b4.js
docs/: canvas.html  canvas.md  geometries.html  geometries.md  graphics.html  graphics.md  input.html  input.md  installation.html  installation.md  intro.html  intro.md  scene.html  scene.md  textures.html  textures.md  window.html  window.md
src/css/: custom.css
src/pages/: index.tsx
(+2 files in other folders)
